--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-credit-card-textinput",
   "description": "A fully customizable react native Credit card TextInput",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/module/index.js",
   "react-native": "dist/module/index.js",
   "types": "dist/typescript/index.d.ts",
@@ -27,20 +27,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/bob": "^0.17.1",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "typescript": "~3.9.5",
-    "babel-eslint": "^10.1.0",
-    "eslint-plugin-react-native": "^3.9.0",
-    "prettier": "^2.0.5"
+    "@types/react": "~17.0.21",
+    "typescript": "~4.3.5"
   },
   "repository": "https://github.com/orjiAce/rn-credit-card-textinput",
   "author": {
@@ -56,7 +44,5 @@
       "typescript"
     ]
   },
-
-  "license": "MIT",
-  "private": true
+  "license": "MIT"
 }
