--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-credit-card-textinput",
   "description": "A fully customizable react native Credit card TextInput",
-  "version": "1.0.2",
+  "version": "1.1.3",
   "main": "dist/module/index.js",
   "react-native": "dist/module/index.js",
   "types": "dist/typescript/index.d.ts",
@@ -22,13 +22,14 @@
   "peerDependencies": {
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
-    "react-native": "0.64.3"
+    "react-native": "0.67.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/bob": "^0.17.1",
     "@types/react": "~17.0.21",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@types/react-native": "~0.66.15"
   },
   "repository": "https://github.com/orjiAce/rn-credit-card-textinput",
   "author": {
